package com.ticketblock.entity.enumeration;

/**
 * Enumeration representing the sector classification of venue rows.
 * 
 * Possible sectors:
 * - STANDARD: Regular seating area with standard pricing
 * - VIP: Premium seating area with higher pricing
 */
public enum RowSector {
    STANDARD,
    VIP
}
